refactor: spaces테이블명 변경에 따른 test 수정